<resources>
    <string name="app_name">SportsBuzz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="subscribe">Subscribe</string>
    <string name="contact_us">Contact Us</string>
    <string name="check_updates">Check Updates</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="read_me_tips">Tips and Guide</string>

    <string name="India_t20">India T20</string>
    <string name="mumbai_indians">Mumbai Indians</string>
    <string name="this_match_is_covered_or_not_is_not_yet_decided_please_check_again_after_some_time">This match is covered or not, is not yet decided. Please check again after some time</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log Out</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="invite_your_friend_and_earn_reward">Invite Your Friend And Earn Reward</string>
    <string name="textView_forget_password">Forget Password</string>
    <string name="submitbtn">Submit</string>
    <string name="please_enter_email">Please Enter Email Address</string>
    <string name="ok_message">OK</string>
    <string name="loading">We are sending password on your email.</string>
    <string name="redeem">Redeem</string>
    <string name="account">Account</string>
    <string name="string_string_todo" />
    <string name="heading">Heading</string>
    <string name="final_team_is_generally_uploaded_5_10_minutes_before_the_match_deadline">Final Team is generally uploaded 5–10 minutes before the match deadline.</string>
    <string name="team_not_available_yet">Team Not Available Yet</string>
    <string name="textview">TextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info">nncll</string>
    <string name="upcoming">upcoming</string>
    <string name="contact_email">precricket.com@gmail.com</string>

    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>



</resources>